<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".OTP.VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/otpverifyes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_code_sent_to"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn't receive the code?"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/resend_code"
                android:textColor="@color/colorascent"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="#2D42FF"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <ProgressBar
            android:id="@+id/progressBar3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_gravity="center"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>